--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
           <ul>
             <li><a href="#programs">Graphic Design</a></li>
             <li><a href="#programs">UI/UX &amp; Web</a></li>
-            <li><a href="#programs">Animation, VFX &amp; Gaming</a></li>          
+            <li><a href="#programs">Animation, VFX &amp; Gaming</a></li>
+			<li><a href="#programs">Game Art</a></li>
           </ul>
         </div>
         <div>
@@ -325,3 +326,4 @@
   <script src="./app.js" defer></script>
 </body>
 </html>
+
