--- a/index.html
+++ b/index.html
@@ -256,7 +256,8 @@
               <select class="input select">
                 <option>Graphic Design</option>
                 <option>UI/UX &amp; Web</option>
-                <option>Animation, VFX &amp; Gaming</option>                
+                <option>Animation, VFX &amp; Gaming</option>
+				<option>Game Art</option>
               </select>
             </label>
             <button class="btn btn--primary" type="submit">Gửi đăng ký</button>
@@ -326,4 +327,5 @@
   <script src="./app.js" defer></script>
 </body>
 </html>
+
 
